--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
-HOST="localhost"
-USERNAME= "root"
-PASSWORD="1234"
+DB_HOST="localhost"
+DB_USERNAME= "root"
+DB_PASSWORD="1234"
 DATABASE = 'hiepvd'
 
-SECRET = "mysecret"
+KEY_SECRET = "mysecret"
 
