--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io-client": "^4.6.1",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
