--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,9 @@
 DB_HOST="localhost"
+DB_PORT = 3306
 DB_USERNAME= "root"
 DB_PASSWORD="1234"
-DATABASE = 'hiepvd'
+DB_DATABASE = 'hiepvd'
 
 KEY_SECRET = "mysecret"
 
+# type nul > Dockerfile
