--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,25 @@ services:
       volumes:
         - ./:/app
       environment:
-        DB_HOST: localhost
-        DB_PORT: 3306
-        DB_USERNAME: root
-        DB_PASSWORD: 1234
-        DB_DATABASE: hiepvd
+        MYSQL_HOST: mysql
+        MYSQL_USER: root
+        MYSQL_PASSWORD: secret
+        MYSQL_DB: todos
+      networks:
+        my-network:
     mysql:
-      image: mysql:8.0
+      image: mysql:8.0.32
+      ports:
+        - 3306:3306
       volumes:
         - todo-mysql-data:/var/lib/mysql
       environment:
         MYSQL_ROOT_PASSWORD: secret
         MYSQL_DATABASE: todos
+      networks:
+        my-network:
 volumes:
   todo-mysql-data:
+networks:
+  my-network:
     
