update setup docker

--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,11 @@ DB_DATABASE = 'hiepvd'
 KEY_SECRET = "mysecret"
 
 # type nul > Dockerfile
+
+# DB_HOST="localhost"
+# DB_PORT = 3306
+# DB_USERNAME= "root"
+# DB_PASSWORD="1234"
+# DB_DATABASE = 'hiepvd'
+
+# KEY_SECRET = "mysecret"
