--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
         MYSQL_DB: todos
       networks:
         my-network:
+
+    # websocket:
+    #   build: .
+    #   ports:
+    #     - '8001:8001'
+    #   depends_on:
+    #     - app
+    #   networks:
+    #     my-network:
+
     mysql:
       image: mysql:8.0.32
       ports:
